wallpaper fixed to the bottom due mobile devices visibility

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 body {
   background-attachment: fixed;
   background-image: url('./pictures/glamping.jpg');
-  background-position: top;
+  background-position: bottom;
   height: 100%;
   margin: 0px;
 } 
